--- a/docs/id-governance/TOC.yml
+++ b/docs/id-governance/TOC.yml
@@ -37,7 +37,7 @@
       - name: Manage access to resources
         href: entitlement-management-access-package-first.md
       - name: Manage access to resources - Microsoft Graph
-        href: /graph/tutorial-access-package-api?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-access-package-api?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Manage access to resources - PowerShell
         href: /powershell/microsoftgraph/tutorial-entitlement-management
       - name: Manage the lifecycle of your group-based licenses in Microsoft Entra ID
@@ -53,13 +53,13 @@
     - name: Access Reviews
       items:
       - name: Review access to Microsoft 365 groups - Microsoft Graph
-        href: /graph/tutorial-accessreviews-m365group?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-accessreviews-m365group?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Review access for guest users - Microsoft Graph
-        href: /graph/tutorial-accessreviews-m365group?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-accessreviews-m365group?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Review access to security groups - Microsoft Graph
-        href: /graph/tutorial-accessreviews-securitygroup?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-accessreviews-securitygroup?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Review access to privileged roles - Microsoft Graph
-        href: /graph/tutorial-accessreviews-roleassignments?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-accessreviews-roleassignments?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
     - name: Lifecycle Workflows
       items:
       - name: Automate employee onboarding tasks - Microsoft Entra admin center
@@ -69,11 +69,11 @@
       - name: Offboarding employees in real-time - Microsoft Entra admin center
         href: tutorial-offboard-custom-workflow-portal.md
       - name: Offboarding employees in real-time - Microsoft Graph
-        href: /graph/tutorial-lifecycle-workflows-offboard-custom-workflow?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-lifecycle-workflows-offboard-custom-workflow?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Automate employee offboarding tasks - Microsoft Entra admin center
         href: tutorial-scheduled-leaver-portal.md  
       - name: Automate employee offboarding tasks - Microsoft Graph
-        href: /graph/tutorial-lifecycle-workflows-scheduled-leaver?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+        href: /graph/tutorial-lifecycle-workflows-scheduled-leaver?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
 - name: Concepts
   expanded: true
   items:
@@ -200,9 +200,9 @@
     - name: Create access review history report
       href: access-reviews-downloadable-review-history.md
     - name: Configure the scope - Microsoft Graph
-      href: /graph/accessreviews-scope-concept?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+      href: /graph/accessreviews-scope-concept?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
     - name: Assign reviewers - Microsoft Graph
-      href: /graph/accessreviews-reviewers-concept?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+      href: /graph/accessreviews-reviewers-concept?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
     - name: Access packages
       items:
         - name: Create an access review
@@ -225,11 +225,11 @@
     - name: Microsoft Entra roles and Azure resource roles
       items:
       - name: Create an access review
-        href: ~/id-governance/privileged-identity-management/pim-create-roles-and-resource-roles-review.md?toc=/azure/active-directory/governance/toc.json
+        href: ~/id-governance/privileged-identity-management/pim-create-roles-and-resource-roles-review.md?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Perform an access review
-        href: ~/id-governance/privileged-identity-management/pim-perform-roles-and-resource-roles-review.md?toc=/azure/active-directory/governance/toc.json
+        href: ~/id-governance/privileged-identity-management/pim-perform-roles-and-resource-roles-review.md?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
       - name: Complete an access review
-        href: ~/id-governance/privileged-identity-management/pim-complete-roles-and-resource-roles-review.md?toc=/azure/active-directory/governance/toc.json
+        href: ~/id-governance/privileged-identity-management/pim-complete-roles-and-resource-roles-review.md?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
     - name: Microsoft Entra PIM for Groups
       items:
       - name: Create an access review
@@ -288,7 +288,7 @@
     - name: Lifecycle Workflows - FAQs
       href: workflows-faqs.md  
     - name: Set EmployeeLeaveDateTime for leaver workflows
-      href: /graph/tutorial-lifecycle-workflows-set-employeeleavedatetime?toc=/azure/active-directory/governance/toc.json&bc=/azure/active-directory/governance/breadcrumb/toc.json
+      href: /graph/tutorial-lifecycle-workflows-set-employeeleavedatetime?toc=/entra/id-governance/toc.json&bc=/entra/id-governance/breadcrumb/toc.json
     - name: Preparing user accounts for Lifecycle workflows tutorials
       href: tutorial-prepare-user-accounts.md 
     - name: Configure a Logic App for Lifecycle Workflow use
