--- a/docs/identity/app-provisioning/toc.yml
+++ b/docs/identity/app-provisioning/toc.yml
@@ -102,7 +102,7 @@ items:
       - name: Export and import your configuration
         href: export-import-provisioning-configuration.md  
       - name: Provisioning reports
-        href: ~/identity/monitoring-health/concept-provisioning-logs.md?context=/azure/active-directory/app-provisioning/context/app-provisioning-context
+        href: ~/identity/monitoring-health/concept-provisioning-logs.md?toc=/entra/identity/app-provisioning/toc.json&bc=/entra/identity/app-provisioning/breadcrumb/TOC.json
       - name: Provisioning insights workbook
         href: provisioning-workbook.md  
     - name: Workday provisioning scenarios
@@ -124,7 +124,7 @@ items:
       - name: Troubleshooting on-premises provisioning
         href: on-premises-ecma-troubleshoot.md
       - name: Provisioning logs
-        href: ~/identity/monitoring-health/concept-provisioning-logs.md?context=/azure/active-directory/app-provisioning/context/app-provisioning-context
+        href: ~/identity/monitoring-health/howto-analyze-provisioning-logs.md?toc=/entra/identity/app-provisioning/toc.json&bc=/entra/identity/app-provisioning/breadcrumb/TOC.json
     - name: Troubleshoot HR provisioning
       items:
       - name: Attribute retrieval issues
