--- a/docs/identity/app-proxy/bread/toc.yml
+++ b/docs/identity/app-proxy/bread/toc.yml
@@ -1,71 +1,17 @@
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
+- name: Entra
+  tocHref: /entra/
+  topicHref: /entra/index
   items:
-  - name: Active Directory
-    tocHref: /azure/active-directory/saas-apps/
-    topicHref: /azure/active-directory/index
+  - name: Microsoft Entra ID
+    tocHref: /entra/identity/
+    topicHref: /entra/identity/index
     items:
     - name: Application proxy
-      tocHref: /azure/active-directory/saas-apps/
-      topicHref: /azure/active-directory/app-proxy/index
-  
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
-  items:  
-  - name: Active Directory
-    tocHref: /azure/active-directory/fundamentals/
-    topicHref: /azure/active-directory/index
-    items:
+      tocHref: /graph/
+      topicHref: /entra/identity/app-proxy/index
     - name: Application proxy
-      tocHref: /azure/active-directory/fundamentals/
-      topicHref: /azure/active-directory/app-proxy/index
-  
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
-  items:  
-  - name: Active Directory
-    tocHref: /azure/active-directory/reports-monitoring/
-    topicHref: /azure/active-directory/index
-    items:
+      tocHref: /entra/identity/domain-services/
+      topicHref: /entra/identity/app-proxy/index
     - name: Application proxy
-      tocHref: /azure/active-directory/reports-monitoring/
-      topicHref: /azure/active-directory/app-proxy/index
-
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
-  items:  
-  - name: Active Directory
-    tocHref: /azure/active-directory/hybrid/
-    topicHref: /azure/active-directory/index
-    items:
-    - name: Application proxy
-      tocHref: /azure/active-directory/hybrid/
-      topicHref: /azure/active-directory/app-proxy/index
-  
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
-  items:  
-  - name: Active Directory
-    tocHref: /azure/active-directory/develop/
-    topicHref: /azure/active-directory/index
-    items:
-    - name: Application proxy
-      tocHref: /azure/active-directory/develop/
-      topicHref: /azure/active-directory/app-proxy/index
-
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
-  items:  
-  - name: Active Directory
-    tocHref: /azure/active-directory-domain-services/
-    topicHref: /azure/active-directory/index
-    items:
-    - name: Application proxy
-      tocHref: /azure/active-directory-domain-services/
-      topicHref: /azure/active-directory/app-proxy/index
+      tocHref: /entra/identity-platform/
+      topicHref: /entra/identity/app-proxy/index
