--- a/docs/architecture/toc.yml
+++ b/docs/architecture/toc.yml
@@ -177,6 +177,19 @@ items:
       href: ops-guide-govern.md
     - name: Operations
       href: ops-guide-ops.md
+  - name: Microsoft Entra Permissions Management Operationalization Guide
+    items:
+    - name: Introduction
+      href: permissions-manage-ops-guide-intro.md
+    - name: Phase 1: Implement the framework to manage at scale
+      href: permissions-manage-ops-guide-one.md
+    - name: Phase 2: Right-size permissions and automate the principle of least privilege
+      href: permissions-manage-ops-guide-two.md
+    - name: Phase 3: Configure Permissions Management monitoring and alerting
+      href: permissions-manage-ops-guide-three.md
+      items:
+      - name: Microsoft Entra Permissions Management Alerts Guide
+        href: permissions-manage-ops-guide-alerts.md      
   - name: Security
     items: 
     - name: Security baseline
