--- a/docs/identity-platform/breadcrumb/toc.yml
+++ b/docs/identity-platform/breadcrumb/toc.yml
@@ -1,17 +1,22 @@
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
+- name: Entra
+  tocHref: /entra/
+  topicHref: /entra/index
   items:
-  - name: Active Directory
-    tocHref: /azure/active-directory/
-    topicHref: /azure/active-directory/index
-    items:
-    - name: Develop
-      tocHref: /azure/active-directory/app-provisioning/
-      topicHref: /azure/active-directory/develop/index
-    - name: Develop
-      tocHref: /azure/developer/java/spring-framework/
-      topicHref: /azure/active-directory/develop/index
-    - name: Develop
-      tocHref: /azure/active-directory/fundamentals/
-      topicHref: /azure/active-directory/develop/index
+  - name: Identity platform
+    tocHref: /entra/identity-platform/
+    topicHref: /entra/fundamentals/
+  - name: Identity platform
+    tocHref: /entra/identity/app-provisioning/
+    topicHref: /entra/fundamentals/
+  - name: Identity platform
+    tocHref: /entra/identity-platform/
+    topicHref: /entra/architecture/
+  - name: Identity platform
+    tocHref: /entra/identity/enterprise-apps/
+    topicHref: /entra/fundamentals/
+  - name: Identity platform
+    tocHref: /entra/identity-platform/
+    topicHref: /graph/
+  - name: Identity platform
+    tocHref: /entra/identity-platform/
+    topicHref: /azure/developer/java/spring-framework/
