--- a/docs/identity/saas-apps/breadcrumb/toc.yml
+++ b/docs/identity/saas-apps/breadcrumb/toc.yml
@@ -1,15 +1,11 @@
-- name: Azure
-  tocHref: /azure/
-  topicHref: /azure/index
+- name: Entra
+  tocHref: /entra/
+  topicHref: /entra/index
   items:
-  - name: Active Directory
-    tocHref: /azure/azure-databricks/
-    topicHref: /azure/active-directory/
+  - name: Microsoft Entra ID
+    tocHref: /entra/identity/
+    topicHref: /entra/identity/index
     items: 
-    - name: Application management
-      tocHref: /azure/azure-databricks/administration-guide/
-      topicHref: /azure/active-directory/manage-apps/
-      items: 
       - name: Application tutorials
         tocHref: /azure/azure-databricks/administration-guide/users-groups/scim/
-        topicHref: /azure/active-directory/saas-apps/tutorial-list/
+        topicHref: /entra/identity/saas-apps/
