Product Backlog Item 2718112: SaaS App Tutorial: FTAPI

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1069,6 +1069,8 @@
         href: frontify-tutorial.md
       - name: Frontline Education
         href: frontline-education-tutorial.md
+      - name: FTAPI
+        href: ftapi-tutorial.md
       - name: Fulcrum
         href: fulcrum-tutorial.md
       - name: Fuse
