--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -2009,6 +2009,8 @@
         href: podbean-tutorial.md
       - name: PolicyStat
         href: policystat-tutorial.md
+      - name: PoliteMail - SSO
+        href: politemail-sso-tutorial.md
       - name: PoolParty Semantic Suite
         href: poolparty-semantic-suite-tutorial.md
       - name: PostBeyond
