--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -390,6 +390,8 @@
         href: browserstack-single-sign-on-tutorial.md
       - name: Brushup
         href: brushup-tutorial.md        
+      - name: bswift
+        href: bswift-tutorial.md
       - name: Bugsnag
         href: bugsnag-tutorial.md
       - name: BullseyeTDP
