--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -382,6 +382,8 @@
         href: britive-tutorial.md
       - name: Broadcom DX SaaS
         href: broadcom-dx-saas-tutorial.md  
+      - name: Brocade SANnav Global View
+        href: brocade-sannav-global-view-tutorial.md
       - name: Brocade SANnav Management Portal
         href: brocade-sannav-management-portal-tutorial.md
       - name: Broker groupe Achat Solutions
