--- a/docs/identity/app-provisioning/bread/toc.yml
+++ b/docs/identity/app-provisioning/bread/toc.yml
@@ -1,6 +1,7 @@
-- name: Entra
+items:
+- name: Microsoft Entra
   tocHref: /entra/
-  topicHref: /entra/index
+  topicHref: /entra/index/
   items:
   - name: Microsoft Entra ID
     tocHref: /entra/identity/
@@ -8,4 +9,4 @@
     items:
     - name: Application provisioning
       tocHref: /entra/identity/monitoring-health/
-      topicHref: /entra/identity/app-provisioning/index
+      topicHref: /entra/identity/app-provisioning/
