--- a/docs/identity/app-proxy/bread/toc.yml
+++ b/docs/identity/app-proxy/bread/toc.yml
@@ -1,4 +1,5 @@
-- name: Entra
+items:
+- name: Microsoft Entra
   tocHref: /entra/
   topicHref: /entra/index
   items:
@@ -8,10 +9,10 @@
     items:
     - name: Application proxy
       tocHref: /graph/
-      topicHref: /entra/identity/app-proxy/index
+      topicHref: /entra/identity/app-proxy/
     - name: Application proxy
       tocHref: /entra/identity/domain-services/
-      topicHref: /entra/identity/app-proxy/index
+      topicHref: /entra/identity/app-proxy/
     - name: Application proxy
       tocHref: /entra/identity-platform/
-      topicHref: /entra/identity/app-proxy/index
+      topicHref: /entra/identity/app-proxy/
