--- a/docs/workload-id/breadcrumb/toc.yml
+++ b/docs/workload-id/breadcrumb/toc.yml
@@ -1,32 +1,33 @@
-- name: Entra
+items:
+- name: Microsoft Entra
   tocHref: /entra/
   topicHref: /entra/index
   items:
   - name: Microsoft Entra Workload ID
     tocHref: /entra/workload-id/
-    topicHref: /entra/workload-id/index
+    topicHref: /entra/workload-id/
     items:
     - name: Microsoft Entra Workload ID
       tocHref: /entra/identity-platform/
-      topicHref: /entra/workload-id/index
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
       tocHref: /entra/identity/managed-identities-azure-resources/
-      topicHref: /entra/workload-id/index
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
-      tocHref: /entra/id-protection/
-      topicHref: /entra/workload-id/index
+      tocHref: /entra/id/-protection/
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
       tocHref: /entra/identity/conditional-access/
-      topicHref: /entra/workload-id/index
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
       tocHref: /entra/identity/monitoring-health/
-      topicHref: /entra/workload-id/index
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
-      tocHref: /entra/id-governance/
-      topicHref: /entra/workload-id/index
+      tocHref: /entra/id/-governance/
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
       tocHref: /entra/identity/enterprise-apps/
-      topicHref: /entra/workload-id/index
+      topicHref: /entra/workload-id/
     - name: Microsoft Entra Workload ID
       tocHref: /graph/
-      topicHref: /entra/workload-id/index
+      topicHref: /entra/workload-id/
