--- a/docs/breadcrumb/toc.yml
+++ b/docs/breadcrumb/toc.yml
@@ -6,6 +6,7 @@ items:
   - name: Microsoft Entra
     tocHref: /entra/
     topicHref: /entra/index
+    items:
     - name: Architecture
       tocHref: /entra/architecture/
       topicHref: /entra/architecture/
