--- a/docs/id-governance/breadcrumb/toc.yml
+++ b/docs/id-governance/breadcrumb/toc.yml
@@ -7,8 +7,8 @@ items:
     tocHref: /graph/
     topicHref: /entra/id-governance
   - name: Microsoft Entra ID Governance
-    tocHref: /id-governance/privileged-identity-management
+    tocHref: /id-governance/privileged-identity-management/
     topicHref: /entra/id-governance
   - name: Microsoft Entra ID Governance
-    tocHref: /powershell
+    tocHref: /powershell/
     topicHref: /entra/id-governance
