--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -21,12 +21,12 @@ jobs:
     - uses: actions/stale@v5
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        days-before-pr-stale: 90
+        days-before-pr-stale: 7
         days-before-pr-close: 91
         stale-pr-label: 'no-pr-activity'
         close-pr-label: 'auto-close'
         stale-pr-message: > 
-           This pull request has been inactive for 90 days.
+           THIS IS A TEST - This pull request has been inactive for 7 days.
            <br/>If you are finished with your changes, don't forget to sign off. See the [contributor guide](https://review.learn.microsoft.com/help/contribute/contribute-how-to-write-pull-request-automation) for instructions.
            <br/>If this PR is inactive for 1 more days, it will be closed automatically. Thank you!
                <br/>
