Product Backlog Item 2734170: SaaS App Tutorial: Rivial Data Security

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -2199,6 +2199,8 @@
         href: riskware-tutorial.md
       - name: Riva
         href: riva-tutorial.md
+      - name: Rivial Data Security
+        href: rivial-data-security-tutorial
       - name: Roadmunk
         href: roadmunk-tutorial.md
       - name: Robin
