Product Backlog Item 2734174: SaaS App Tutorial: elia

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -860,6 +860,8 @@
         href: ekincare-tutorial.md
       - name: eLearnPOSH
         href: elearnposh-tutorial.md  
+      - name: elia
+        href: elia-tutorial.md
       - name: Eli Onboarding
         href: elionboarding-tutorial.md
       - name: Elium
