--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1207,6 +1207,8 @@
         href: hirevue-tutorial.md
       - name: Hive
         href: hive-tutorial.md
+      - name: Hone
+        href: hone-tutorial.md
       - name: Honestly
         href: honestly-tutorial.md
       - name: Hootsuite
