--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -2200,7 +2200,7 @@
       - name: Riva
         href: riva-tutorial.md
       - name: Rivial Data Security
-        href: rivial-data-security-tutorial
+        href: rivial-data-security-tutorial.md
       - name: Roadmunk
         href: roadmunk-tutorial.md
       - name: Robin
