Adds data storage and privacy.

--- a/docs/global-secure-access/toc.yml
+++ b/docs/global-secure-access/toc.yml
@@ -92,6 +92,8 @@ items:
     href: reference-remote-network-configurations.md
   - name: Points of presence
     href: reference-points-of-presence.md
+  - name: Data storage and privacy
+    href: reference-data-storage-and-privacy.md
   - name: Microsoft Graph APIs
     href: /graph/api/resources/networkaccess-global-secure-access-api-overview
   - name: FAQs
