--- a/docs/architecture/breadcrumb/toc.yml
+++ b/docs/architecture/breadcrumb/toc.yml
@@ -4,7 +4,7 @@ items:
   topicHref: /entra/index
   items:
   - name: Architecture
-    tocHref: /entra/identity-platform/
+    tocHref: /entra/architecture/
     topicHref: /entra/architecture/
   - name: Architecture
     tocHref: /security/benchmark/azure/baselines/
