--- a/docs/identity/multi-tenant-organizations/TOC.yml
+++ b/docs/identity/multi-tenant-organizations/TOC.yml
@@ -40,17 +40,17 @@
       - name: PowerShell or Graph API
         href: cross-tenant-synchronization-configure-graph.md
     - name: Scoping users or groups to be provisioned
-      href: ~/identity/app-provisioning/define-conditional-rules-for-provisioning-user-accounts.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json&pivots=cross-tenant-synchronization
+      href: ~/identity/app-provisioning/define-conditional-rules-for-provisioning-user-accounts.md?toc=/entra/identity/multi-tenant-organizations/toc.json&bc=/entra/identity/multi-tenant-organizations/breadcrumb/toc.json?pivots=cross-tenant-synchronization
     - name: Enable accidental deletions prevention
-      href: ~/identity/app-provisioning/accidental-deletions.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json&pivots=cross-tenant-synchronization
+      href: ~/identity/app-provisioning/accidental-deletions.md?toc=/entra/identity/multi-tenant-organizations/toc.json&bc=/entra/identity/multi-tenant-organizations/breadcrumb/toc.json?pivots=cross-tenant-synchronization
     - name: Provision on-demand
-      href: ~/identity/app-provisioning/provision-on-demand.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json&pivots=cross-tenant-synchronization
+      href: ~/identity/app-provisioning/provision-on-demand.md?toc=/entra/identity/multi-tenant-organizations/toc.json&bc=/entra/identity/multi-tenant-organizations/breadcrumb/toc.json?pivots=cross-tenant-synchronization
     - name: Provisioning logs
-      href: ~/identity/monitoring-health/concept-provisioning-logs.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json&pivots=cross-tenant-synchronization
+      href: ~/identity/monitoring-health/concept-provisioning-logs.md?toc=/entra/identity/multi-tenant-organizations/toc.json&bc=/entra/identity/multi-tenant-organizations/breadcrumb/toc.json?pivots=cross-tenant-synchronization
     - name: Known issues
-      href: ~/identity/app-provisioning/known-issues.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json&pivots=cross-tenant-synchronization
+      href: ~/identity/app-provisioning/known-issues.md?toc=/entra/identity/multi-tenant-organizations/toc.json&bc=/entra/identity/multi-tenant-organizations/breadcrumb/toc.json?pivots=cross-tenant-synchronization
 - name: Reference
   expanded: true
   items:
   - name: Function reference for writing expressions for attribute mappings
-    href: ~/identity/app-provisioning/functions-for-customizing-application-data.md?toc=/azure/active-directory/multi-tenant-organizations/toc.json
+    href: ~/identity/app-provisioning/functions-for-customizing-application-data.md?toc/entra/identity/multi-tenant-organizations/toc.json?bc=/entra/identity/multi-tenant-organizations/breadcrumb/toc.json?
