--- a/docs/identity/role-based-access-control/breadcrumb/toc.yml
+++ b/docs/identity/role-based-access-control/breadcrumb/toc.yml
@@ -1,3 +1,4 @@
+items:
 - name: Entra
   tocHref: /entra/
   topicHref: /entra/index
@@ -8,10 +9,10 @@
     items:
     - name: Role-based access control
       tocHref: /graph/
-      topicHref: /entra/identity/role-based-access-control/index
+      topicHref: /entra/identity/role-based-access-control/
     - name: Role-based access control
       tocHref: /entra/fundamentals/
-      topicHref: /entra/identity/role-based-access-control/index
+      topicHref: /entra/identity/role-based-access-control/
     - name: Role-based access control
       tocHref: /entra/identity/users/
-      topicHref: /entra/identity/role-based-access-control/index
+      topicHref: /entra/identity/role-based-access-control/
